Check for potential null pointer exception during kbl2vec conversion (#359)